"""
端到端集成测试
测试完整的API工作流和服务集成
"""

import json
import time
from unittest.mock import Mock, patch

import grpc
import pytest


class TestBacktestEndToEnd:
    """回测服务端到端测试"""

    @pytest.fixture
    def grpc_channel(self):
        """创建gRPC通道"""
        # 在实际测试中连接到测试服务器
        # channel = grpc.insecure_channel('localhost:50051')
        # yield channel
        # channel.close()

        # 对于单元测试，使用mock
        channel = Mock()
        return channel

    @pytest.fixture
    def backtest_stub(self, grpc_channel):
        """创建回测服务stub"""
        # 在实际测试中使用真实的stub
        # from api_proto import backtest_pb2_grpc
        # stub = backtest_pb2_grpc.BacktestServiceStub(grpc_channel)
        # yield stub

        # 对于单元测试，使用mock
        stub = Mock()
        return stub

    def test_complete_backtest_workflow(self, backtest_stub):
        """测试完整的回测工作流"""
        # 1. 提交回测任务
        request = Mock()
        request.stock_codes = ["000001.SZ", "600000.SH"]
        request.start_time = "2024-01-01"
        request.end_time = "2024-12-31"
        request.strategy_config = json.dumps({"strategy_type": "trend_following", "lookback_period": 20})

        submit_response = Mock()
        submit_response.backtest_id = "bt_integration_001"
        submit_response.status = "SUBMITTED"

        backtest_stub.IntegratedBacktest.return_value = submit_response

        submit_result = backtest_stub.IntegratedBacktest(request)
        assert submit_result.backtest_id is not None

        backtest_id = submit_result.backtest_id

        # 2. 轮询状态直到完成
        max_polls = 10
        for i in range(max_polls):
            status_request = Mock()
            status_request.backtest_id = backtest_id

            status_response = Mock()
            status_response.status = "COMPLETED" if i == max_polls - 1 else "RUNNING"
            status_response.progress = (i + 1) * 10

            backtest_stub.GetBacktestStatus.return_value = status_response

            status = backtest_stub.GetBacktestStatus(status_request)

            if status.status == "COMPLETED":
                break

            time.sleep(0.1)  # 实际测试中可能需要更长时间

        assert status.status == "COMPLETED"

        # 3. 获取回测结果
        result_request = Mock()
        result_request.backtest_id = backtest_id

        result_response = Mock()
        result_response.backtest_id = backtest_id
        result_response.status = "COMPLETED"
        result_response.performance_metrics = Mock()
        result_response.performance_metrics.total_return = 0.25
        result_response.performance_metrics.sharpe_ratio = 1.5

        backtest_stub.GetBacktestResult.return_value = result_response

        result = backtest_stub.GetBacktestResult(result_request)

        assert result.status == "COMPLETED"
        assert result.performance_metrics.total_return > 0

    def test_concurrent_backtests(self, backtest_stub):
        """测试并发回测"""
        # 提交多个回测任务
        backtest_ids = []
        for i in range(5):
            request = Mock()
            request.stock_codes = [f"00000{i}.SZ"]

            response = Mock()
            response.backtest_id = f"bt_concurrent_{i}"
            response.status = "SUBMITTED"

            backtest_stub.IntegratedBacktest.return_value = response

            result = backtest_stub.IntegratedBacktest(request)
            backtest_ids.append(result.backtest_id)

        # 验证所有任务都已提交
        assert len(backtest_ids) == 5
        assert all(bid is not None for bid in backtest_ids)


class TestRealTimeStreamEndToEnd:
    """实时流处理端到端测试"""

    @pytest.fixture
    def realtime_stub(self):
        """创建实时处理服务stub"""
        stub = Mock()
        return stub

    def test_streaming_data_processing(self, realtime_stub):
        """测试流式数据处理"""

        # 创建数据生成器
        def generate_market_data():
            for i in range(100):
                request = Mock()
                request.stock_code = "000001.SZ"
                request.price = 10.0 + i * 0.01
                request.volume = 1000000 + i * 1000
                request.timestamp = str(time.time())
                yield request

        # 模拟响应
        responses = []
        for i in range(100):
            response = Mock()
            response.stock_code = "000001.SZ"
            response.stream_id = "stream_integration_001"
            response.processed_data = json.dumps({"index": i})
            responses.append(response)

        realtime_stub.StreamMarketData.return_value = iter(responses)

        # 发送流式数据
        response_stream = realtime_stub.StreamMarketData(generate_market_data())

        # 接收所有响应
        received = list(response_stream)

        assert len(received) == 100
        assert all(r.stream_id == "stream_integration_001" for r in received)

    def test_feature_calculation_pipeline(self, realtime_stub):
        """测试特征计算流水线"""
        # 1. 发送市场数据
        # 2. 计算技术指标
        # 3. 验证结果

        request = Mock()
        request.stock_code = "000001.SZ"
        request.feature_types = ["sma_20", "sma_50", "rsi", "macd"]

        response = Mock()
        response.stock_code = "000001.SZ"
        response.features = {"sma_20": 10.5, "sma_50": 10.3, "rsi": 65.2, "macd": 0.15}

        realtime_stub.ComputeFeatures.return_value = response

        result = realtime_stub.ComputeFeatures(request)

        assert len(result.features) == 4
        assert "sma_20" in result.features


class TestMLTrainingEndToEnd:
    """ML训练端到端测试"""

    @pytest.fixture
    def ml_stub(self):
        """创建ML服务stub"""
        stub = Mock()
        return stub

    def test_complete_ml_workflow(self, ml_stub, sample_ml_training_data):
        """测试完整的ML工作流"""
        # 1. 提交训练任务
        train_request = Mock()
        train_request.model_type = "random_forest"
        train_request.training_data = sample_ml_training_data.to_json()
        train_request.feature_columns = ["price", "volume", "sma_20", "rsi"]
        train_request.target_column = "target"

        train_response = Mock()
        train_response.task_id = "ml_integration_001"
        train_response.status = "SUBMITTED"

        ml_stub.TrainModel.return_value = train_response

        train_result = ml_stub.TrainModel(train_request)
        task_id = train_result.task_id

        # 2. 轮询训练状态
        for i in range(10):
            status_request = Mock()
            status_request.task_id = task_id

            status_response = Mock()
            status_response.status = "COMPLETED" if i == 9 else "TRAINING"
            status_response.progress = (i + 1) * 10

            ml_stub.GetTrainingStatus.return_value = status_response

            status = ml_stub.GetTrainingStatus(status_request)

            if status.status == "COMPLETED":
                status.model_id = "model_integration_001"
                break

        assert status.status == "COMPLETED"
        model_id = status.model_id

        # 3. 使用模型进行预测
        predict_request = Mock()
        predict_request.model_id = model_id
        predict_request.input_data = json.dumps({"price": [11.5], "volume": [1400000], "sma_20": [10.7], "rsi": [65]})

        predict_response = Mock()
        predict_response.predictions = [1]
        predict_response.probabilities = [0.75, 0.25]

        ml_stub.Predict.return_value = predict_response

        predict_result = ml_stub.Predict(predict_request)

        assert len(predict_result.predictions) > 0

        # 4. 获取模型指标
        metrics_request = Mock()
        metrics_request.model_id = model_id

        metrics_response = Mock()
        metrics_response.accuracy = 0.85
        metrics_response.f1_score = 0.85

        ml_stub.GetModelMetrics.return_value = metrics_response

        metrics = ml_stub.GetModelMetrics(metrics_request)

        assert metrics.accuracy > 0.8


class TestCrossServiceIntegration:
    """跨服务集成测试"""

    def test_realtime_to_ml_pipeline(self):
        """测试实时数据到ML训练的流水线"""
        # 1. 实时处理获取特征数据
        # 2. 使用特征数据训练模型
        # 3. 实时预测

        # 这是一个跨服务集成流程的占位
        assert True

    def test_ml_to_backtest_pipeline(self):
        """测试ML模型到回测验证的流水线"""
        # 1. 训练ML模型
        # 2. 使用模型生成信号
        # 3. 回测验证策略

        # 这是一个跨服务集成流程的占位
        assert True

    def test_full_trading_system_workflow(self):
        """测试完整交易系统工作流"""
        # 1. 实时获取市场数据
        # 2. 计算技术指标
        # 3. ML模型生成信号
        # 4. 回测验证
        # 5. 执行交易

        # 这是一个完整系统流程的占位
        assert True


class TestServiceResilience:
    """服务弹性测试"""

    def test_gpu_fallback_to_cpu(self):
        """测试GPU故障时的CPU降级"""
        with patch("utils.gpu_utils.GPUResourceManager") as MockManager:
            manager = MockManager()

            # 模拟GPU故障
            manager.is_gpu_available.return_value = False

            # 应该降级到CPU
            use_cpu = not manager.is_gpu_available()
            assert use_cpu is True

    def test_service_retry_on_failure(self):
        """测试服务失败重试"""
        with patch("services.integrated_backtest_service.IntegratedBacktestService") as MockService:
            service = MockService(None, None, None)

            # 第一次失败
            service.IntegratedBacktest.side_effect = [
                grpc.RpcError("Temporary failure"),
                Mock(backtest_id="bt_retry_001", status="SUBMITTED"),
            ]

            # 重试逻辑
            max_retries = 3
            for attempt in range(max_retries):
                try:
                    result = service.IntegratedBacktest(Mock())
                    assert result.status == "SUBMITTED"
                    break
                except grpc.RpcError:
                    if attempt == max_retries - 1:
                        raise
                    time.sleep(0.1)

    def test_timeout_handling(self):
        """测试超时处理"""
        with patch("services.integrated_backtest_service.IntegratedBacktestService") as MockService:
            service = MockService(None, None, None)

            # 模拟超时
            service.IntegratedBacktest.side_effect = grpc.RpcError("Deadline exceeded")

            with pytest.raises(grpc.RpcError):
                service.IntegratedBacktest(Mock())

    def test_connection_pool_management(self):
        """测试连接池管理"""
        # 模拟多个并发连接
        connections = []
        max_connections = 10

        for i in range(15):
            conn = Mock()
            connections.append(conn)

        # 验证连接池限制
        active_connections = connections[:max_connections]
        assert len(active_connections) == max_connections
