"""
TDD测试框架 - 数据库服务重构
遵循红-绿-重构循环，确保拆分后的功能完整性
"""

import pytest
import pandas as pd
from unittest.mock import Mock, patch
import sys
import os

# 添加项目根路径
project_root = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
sys.path.insert(0, project_root)


class TestDatabaseConnectionManager:
    """数据库连接管理器测试类"""

    def test_init_connection_manager(self):
        """测试：初始化连接管理器"""
        # TODO: 这个测试在重构前应该失败，因为没有拆分的模块
        from src.database.connection_manager import DatabaseConnectionManager

        manager = DatabaseConnectionManager()

        assert manager is not None
        assert hasattr(manager, "primary_connection")
        assert hasattr(manager, "backup_connection")
        assert hasattr(manager, "connection_pool")

    def test_primary_connection_success(self):
        """测试：主数据库连接成功"""
        from src.database.connection_manager import DatabaseConnectionManager

        manager = DatabaseConnectionManager()

        # 模拟成功连接
        with patch.object(manager, "_create_connection") as mock_connect:
            mock_connect.return_value = Mock()

            result = manager.connect_primary()

            assert result is True
            mock_connect.assert_called_once()

    def test_backup_connection_fallback(self):
        """测试：备用数据库连接故障转移"""
        from src.database.connection_manager import DatabaseConnectionManager

        manager = DatabaseConnectionManager()

        # 模拟主连接失败，备用连接成功
        with patch.object(manager, "_create_connection") as mock_connect:
            mock_connect.side_effect = [Exception("Primary failed"), Mock()]

            result = manager.connect_with_fallback()

            assert result is True
            assert mock_connect.call_count == 2

    def test_connection_health_check(self):
        """测试：连接健康检查"""
        from src.database.connection_manager import DatabaseConnectionManager

        manager = DatabaseConnectionManager()

        # 测试无连接时的健康检查（应该自动创建连接）
        is_healthy = manager.check_connection_health()

        assert is_healthy is True
        assert manager.primary_connection is not None

        # 测试已有连接的健康检查
        with patch.object(manager, "_test_connection") as mock_test:
            mock_test.return_value = True

            is_healthy = manager.check_connection_health()

            assert is_healthy is True
            mock_test.assert_called_once()

    def test_get_data_with_failover(self):
        """测试：故障转移数据获取"""
        from src.database.connection_manager import DatabaseConnectionManager

        manager = DatabaseConnectionManager()
        test_data = {"symbol": "000001", "price": 10.5}

        # 模拟主连接失败，备用连接成功
        with patch.object(manager, "_query_database") as mock_query:
            mock_query.side_effect = [Exception("Primary failed"), test_data]

            result = manager.get_data_with_failover("SELECT * FROM stocks")

            assert result == test_data
            assert mock_query.call_count == 2


class TestDatabaseQueryExecutor:
    """数据库查询执行器测试类"""

    def test_get_stock_list(self):
        """测试：获取股票列表"""
        # TODO: 重构前应该失败
        from src.database.query_executor import DatabaseQueryExecutor

        executor = DatabaseQueryExecutor()

        with patch.object(executor, "_execute_query") as mock_query:
            mock_query.return_value = [
                {"symbol": "000001", "name": "平安银行"},
                {"symbol": "000002", "name": "万科A"},
            ]

            result = executor.get_stock_list()

            assert isinstance(result, list)
            assert len(result) == 2
            assert result[0]["symbol"] == "000001"

    def test_get_stock_detail(self):
        """测试：获取股票详情"""
        from src.database.query_executor import DatabaseQueryExecutor

        executor = DatabaseQueryExecutor()

        with patch.object(executor, "_execute_query") as mock_query:
            mock_query.return_value = {
                "symbol": "000001",
                "name": "平安银行",
                "industry": "银行",
                "market": "深交所",
            }

            result = executor.get_stock_detail("000001")

            assert isinstance(result, dict)
            assert result["symbol"] == "000001"
            assert "name" in result

    def test_get_realtime_quotes(self):
        """测试：获取实时行情"""
        from src.database.query_executor import DatabaseQueryExecutor

        executor = DatabaseQueryExecutor()
        symbols = ["000001", "000002"]

        with patch.object(executor, "_execute_query") as mock_query:
            mock_query.return_value = [
                {"symbol": "000001", "price": 10.5, "change": 0.1},
                {"symbol": "000002", "price": 15.2, "change": -0.2},
            ]

            result = executor.get_realtime_quotes(symbols)

            assert isinstance(result, list)
            assert len(result) == 2
            assert all("symbol" in item for item in result)

    def test_batch_indicators_query(self):
        """测试：批量指标查询"""
        from src.database.query_executor import DatabaseQueryExecutor

        executor = DatabaseQueryExecutor()
        symbols = ["000001", "000002", "000003"]

        with patch.object(executor, "_execute_batch_query") as mock_query:
            mock_query.return_value = {
                "000001": {"pe": 10.5, "pb": 1.2},
                "000002": {"pe": 15.3, "pb": 2.1},
                "000003": {"pe": 8.9, "pb": 0.9},
            }

            result = executor.get_batch_indicators(symbols)

            assert isinstance(result, dict)
            assert len(result) == 3
            assert "000001" in result

    def test_query_performance_benchmark(self):
        """测试：查询性能基准"""
        from src.database.query_executor import DatabaseQueryExecutor
        import time

        executor = DatabaseQueryExecutor()

        with patch.object(executor, "_execute_query") as mock_query:
            mock_query.return_value = [{"data": "test"}] * 1000

            # 性能测试：100次查询应在2秒内完成
            start_time = time.time()
            for _ in range(100):
                executor.get_stock_list()
            end_time = time.time()

            total_time = end_time - start_time
            assert total_time < 2.0, f"Query performance benchmark failed: {total_time:.2f}s > 2.0s"


class TestTechnicalIndicatorCalculator:
    """技术指标计算器测试类"""

    def test_calculate_technical_indicators(self):
        """测试：计算技术指标"""
        # TODO: 重构前应该失败
        from src.database.indicator_calculator import TechnicalIndicatorCalculator

        calculator = TechnicalIndicatorCalculator()
        test_data = pd.DataFrame(
            {
                "close": [10.0, 10.5, 11.0, 10.8, 11.2],
                "volume": [1000, 1200, 1500, 1100, 1300],
            }
        )

        result = calculator.calculate_technical_indicators(test_data)

        assert isinstance(result, dict)
        assert "sma" in result  # 简单移动平均
        assert "rsi" in result  # 相对强弱指标
        assert "macd" in result  # MACD指标

    def test_calculate_trend_indicators(self):
        """测试：计算趋势指标"""
        from src.database.indicator_calculator import TechnicalIndicatorCalculator

        calculator = TechnicalIndicatorCalculator()
        test_data = pd.DataFrame({"close": [10.0, 10.5, 11.0, 10.8, 11.2, 11.5, 11.3]})

        result = calculator.calculate_trend_indicators(test_data)

        assert isinstance(result, dict)
        assert "ma5" in result  # 5日均线
        assert "ma10" in result  # 10日均线
        assert "trend" in result  # 趋势方向

    def test_calculate_momentum_indicators(self):
        """测试：计算动量指标"""
        from src.database.indicator_calculator import TechnicalIndicatorCalculator

        calculator = TechnicalIndicatorCalculator()
        test_data = pd.DataFrame({"close": [10.0, 10.5, 11.0, 10.8, 11.2]})

        result = calculator.calculate_momentum_indicators(test_data)

        assert isinstance(result, dict)
        assert "rsi" in result  # 相对强弱指标
        assert "momentum" in result  # 动量指标

    def test_generate_trading_signals(self):
        """测试：生成交易信号"""
        from src.database.indicator_calculator import TechnicalIndicatorCalculator

        calculator = TechnicalIndicatorCalculator()
        test_data = pd.DataFrame(
            {
                "close": [10.0, 10.5, 11.0, 10.8, 11.2],
                "volume": [1000, 1200, 1500, 1100, 1300],
            }
        )

        result = calculator.generate_trading_signals(test_data)

        assert isinstance(result, dict)
        assert "signal" in result  # 买入/卖出/持有
        assert "confidence" in result  # 信号置信度
        assert result["signal"] in ["BUY", "SELL", "HOLD"]


class TestMonitoringDataManager:
    """监控数据管理器测试类"""

    def test_get_monitoring_alerts(self):
        """测试：获取监控告警"""
        # TODO: 重构前应该失败
        from src.database.monitoring_data_manager import MonitoringDataManager

        manager = MonitoringDataManager()

        with patch.object(manager, "_query_monitoring_data") as mock_query:
            mock_query.return_value = [
                {
                    "id": 1,
                    "type": "PRICE_ALERT",
                    "symbol": "000001",
                    "message": "价格突破阻力位",
                    "timestamp": "2024-01-01 10:00:00",
                    "severity": "HIGH",
                }
            ]

            result = manager.get_monitoring_alerts()

            assert isinstance(result, list)
            assert len(result) == 1
            assert result[0]["type"] == "PRICE_ALERT"

    def test_get_monitoring_summary(self):
        """测试：获取监控摘要"""
        from src.database.monitoring_data_manager import MonitoringDataManager

        manager = MonitoringDataManager()

        with patch.object(manager, "_query_monitoring_summary") as mock_query:
            mock_query.return_value = {
                "total_alerts": 25,
                "high_severity": 5,
                "medium_severity": 10,
                "low_severity": 10,
                "last_update": "2024-01-01 10:00:00",
            }

            result = manager.get_monitoring_summary()

            assert isinstance(result, dict)
            assert "total_alerts" in result
            assert result["total_alerts"] == 25

    def test_get_system_health_status(self):
        """测试：获取系统健康状态"""
        from src.database.monitoring_data_manager import MonitoringDataManager

        manager = MonitoringDataManager()

        with patch.object(manager, "_check_system_health") as mock_health:
            mock_health.return_value = {
                "database_status": "HEALTHY",
                "connection_pool": "OPTIMAL",
                "memory_usage": "NORMAL",
                "cpu_usage": "NORMAL",
            }

            result = manager.get_system_health_status()

            assert isinstance(result, dict)
            assert result["database_status"] == "HEALTHY"

    def test_monitoring_data_performance(self):
        """测试：监控数据查询性能"""
        from src.database.monitoring_data_manager import MonitoringDataManager
        import time

        manager = MonitoringDataManager()

        with patch.object(manager, "_query_monitoring_data") as mock_query:
            mock_query.return_value = [{"id": i} for i in range(1000)]

            # 性能测试：100次查询应在1秒内完成
            start_time = time.time()
            for _ in range(100):
                manager.get_monitoring_alerts()
            end_time = time.time()

            total_time = end_time - start_time
            assert total_time < 1.0, f"Monitoring query performance failed: {total_time:.2f}s > 1.0s"


if __name__ == "__main__":
    # 运行测试以验证当前状态（应该全部失败）
    pytest.main([__file__, "-v", "--tb=short"])
